start styling first section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
 </head>
 <body>
     <main>
-        <header>
-            <h1>Bem-vindo á loja da lego &#169;</h1>
+        <header class="es-centered">
+            <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
         </header>
+        <section class="es-flex-container es-first">
+            <figure class="es-flex-item">
+                <img src="./assets/img/01-novidades.png">
+                <figcaption class="es-figcaption-red">Novidades</figcaption>
+            </figure>
+            <figure class="es-flex-item">
+                <img src="./assets/img/02-mais.png">
+                <figcaption class="es-figcaption-red">Os mais vendidos</figcaption>
+            </figure>
+            <figure class="es-flex-item">
+                <img src="./assets/img/03-dificeis.png">
+                <figcaption class="es-figcaption-red">Difíceis de encontrar</figcaption>
+            </figure>
+            <figure class="es-flex-item">
+                <img src="./assets/img/04-compre.png">
+            </figure>
+            
+        </section>
     </main>
 </body>
 </html>
