worked on styling first section with tiles

--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
             <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
         </header>
-        <section class="es-flex-container es-first">
-            <figure class="es-flex-item">
+        <section class="es-grid-container es-first">
+            <figure class="es-grid-item">
                 <img src="./assets/img/01-novidades.png">
                 <figcaption class="es-figcaption-red">Novidades</figcaption>
             </figure>
-            <figure class="es-flex-item">
+            <figure class="es-grid-item">
                 <img src="./assets/img/02-mais.png">
                 <figcaption class="es-figcaption-red">Os mais vendidos</figcaption>
             </figure>
-            <figure class="es-flex-item">
+            <figure class="es-grid-item">
                 <img src="./assets/img/03-dificeis.png">
                 <figcaption class="es-figcaption-red">Difíceis de encontrar</figcaption>
             </figure>
-            <figure class="es-flex-item">
+            <figure class="es-grid-item es-centered">
+                <h2 class="es-centered">Compre todos os  sets da lego</h2>
                 <img src="./assets/img/04-compre.png">
             </figure>
             
