won the fight with 4th item style

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <figcaption class="es-figcaption-red">Difíceis de encontrar</figcaption>
             </figure>
             <figure class="es-grid-item es-centered">
-                <h2 class="es-centered">Compre todos os  sets da lego</h2>
-                <img src="./assets/img/04-compre.png">
+                <h2>Compre todos os  sets da lego</h2>
+                <!-- <img src="./assets/img/04-compre.png"> -->
+                
             </figure>
             
         </section>
