font sizes update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 <body>
-    <main>
+    <main class="es-main">
         <header class="es-centered">
             <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
