--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
         </header>
-        <section class="es-grid-container es-first">
+
+        <section class="es-grid-container">
             <figure class="es-grid-item">
                 <img src="./assets/img/01-novidades.png">
                 <figcaption class="es-figcaption-red">Novidades</figcaption>
@@ -33,6 +34,53 @@
                 
             </figure>
             
+        </section>
+
+        <section class="es-divider div-01"></section>
+
+        <section class="es-grid-container">
+            <figure class="es-grid-item_v2">
+                <img src="./assets/img/1+ kid.png">
+                <figcaption class="es-flex-container">
+                    <p>1 &frac12; +</p>
+                    <img src="assets/img/1+ icon.png">
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/1+ kid.png">
+                <figcaption>
+                    <p>1 &frac12; +</p>
+                    <div><img src="assets/img/1+ icon.png"></div>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/1+ kid.png">
+                <figcaption>
+                    <p>1 &frac12; +</p>
+                    <div><img src="assets/img/1+ icon.png"></div>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/1+ kid.png">
+                <figcaption>
+                    <p>1 &frac12; +</p>
+                    <div><img src="assets/img/1+ icon.png"></div>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/1+ kid.png">
+                <figcaption>
+                    <p>1 &frac12; +</p>
+                    <div><img src="assets/img/1+ icon.png"></div>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./assets/img/1+ kid.png">
+                <figcaption>
+                    <p>1 &frac12; +</p>
+                    <div><img src="assets/img/1+ icon.png"></div>
+                </figcaption>
+            </figure>
         </section>
     </main>
 </body>
