align age sections with flex

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="./assets/img/banner.png">
         </header>
 
-        <section class="es-grid-container">
+        <section id="es-categories-main" class="es-grid-container">
             <figure class="es-grid-item">
                 <img src="./assets/img/01-novidades.png">
                 <figcaption class="es-figcaption-red">Novidades</figcaption>
@@ -38,45 +38,45 @@
 
         <section class="es-divider div-01"></section>
 
-        <section class="es-grid-container">
-            <figure class="es-grid-item_v2">
+        <section id="es-categories-age" class="es-flex-container-row">
+            <figure class="es-flex-item double">
                 <img src="./assets/img/1+ kid.png">
-                <figcaption class="es-flex-container">
+                <figcaption class="es-flex-container-row">
                     <p>1 &frac12; +</p>
                     <img src="assets/img/1+ icon.png">
                 </figcaption>
             </figure>
-            <figure>
+            <figure class="es-flex-item">
                 <img src="./assets/img/4+ kid.png">
-                <figcaption>
+                <figcaption class="es-flex-container-row">
                     <p>4 +</p>
                     <div><img src="assets/img/4+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure>
+            <figure figure class="es-flex-item">
                 <img src="./assets/img/6+ kid.png">
-                <figcaption>
+                <figcaption class="es-flex-container-row">
                     <p>6 +</p>
                     <div><img src="assets/img/6+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure>
+            <figure figure class="es-flex-item">
                 <img src="./assets/img/9+ kid.png">
-                <figcaption>
+                <figcaption class="es-flex-container-row">
                     <p>9 +</p>
                     <div><img src="assets/img/9+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure>
+            <figure figure class="es-flex-item">
                 <img src="./assets/img/13+ kid.png">
-                <figcaption>
+                <figcaption class="es-flex-container-row">
                     <p>13 +</p>
                     <div><img src="assets/img/13+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure>
+            <figure figure class="es-flex-item double">
                 <img src="./assets/img/18+ kid.png">
-                <figcaption>
+                <figcaption class="es-flex-container-row">
                     <p>18 +</p>
                     <div><img src="assets/img/18+ icon.png"></div>
                 </figcaption>
