--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <main class="es-main">
-        <header class="es-centered">
+        <header class="es-centered margin">
             <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
         </header>
 
-        <section id="es-categories-main" class="es-grid-container">
+        <section id="es-categories-main" class="es-grid-container margin">
             <figure class="es-grid-item">
                 <img src="./assets/img/01-novidades.png">
                 <figcaption class="es-figcaption-red">Novidades</figcaption>
@@ -30,51 +30,49 @@
             </figure>
             <figure class="es-grid-item es-centered">
                 <h2>Compre todos os  sets da lego</h2>
-                <!-- <img src="./assets/img/04-compre.png"> -->
-                
             </figure>
             
         </section>
 
         <section class="es-divider div-01"></section>
 
-        <section id="es-categories-age" class="es-flex-container-row">
-            <figure class="es-flex-item double">
+        <section id="es-categories-age" class="es-grid-container margin">
+            <figure class="es-grid-first es-flex-container-col">
                 <img src="./assets/img/1+ kid.png">
                 <figcaption class="es-flex-container-row">
                     <p>1 &frac12; +</p>
                     <img src="assets/img/1+ icon.png">
                 </figcaption>
             </figure>
-            <figure class="es-flex-item">
+            <figure class="es-flex-container-col">
                 <img src="./assets/img/4+ kid.png">
                 <figcaption class="es-flex-container-row">
                     <p>4 +</p>
                     <div><img src="assets/img/4+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure figure class="es-flex-item">
+            <figure class="es-flex-container-col">
                 <img src="./assets/img/6+ kid.png">
                 <figcaption class="es-flex-container-row">
                     <p>6 +</p>
                     <div><img src="assets/img/6+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure figure class="es-flex-item">
+            <figure class="es-flex-container-col">
                 <img src="./assets/img/9+ kid.png">
                 <figcaption class="es-flex-container-row">
                     <p>9 +</p>
                     <div><img src="assets/img/9+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure figure class="es-flex-item">
+            <figure class="es-flex-container-col">
                 <img src="./assets/img/13+ kid.png">
                 <figcaption class="es-flex-container-row">
                     <p>13 +</p>
                     <div><img src="assets/img/13+ icon.png"></div>
                 </figcaption>
             </figure>
-            <figure figure class="es-flex-item double">
+            <figure class="es-grid-first es-grid-last es-flex-container-col">
                 <img src="./assets/img/18+ kid.png">
                 <figcaption class="es-flex-container-row">
                     <p>18 +</p>
