styled age categories

--- a/index.html
+++ b/index.html
@@ -40,42 +40,42 @@
             <figure class="es-grid-first es-flex-container-col">
                 <img src="./assets/img/1+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <p>1 &frac12; +</p>
+                    <h3>1 &frac12; +</h3>
                     <img src="assets/img/1+ icon.png">
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/4+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <p>4 +</p>
+                    <h3>4 +</h3>
                     <div><img src="assets/img/4+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/6+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <p>6 +</p>
+                    <h3>6 +</h3>
                     <div><img src="assets/img/6+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/9+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <p>9 +</p>
+                    <h3>9 +</h3>
                     <div><img src="assets/img/9+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/13+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <p>13 +</p>
+                    <h3>13 +</h3>
                     <div><img src="assets/img/13+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-grid-first es-grid-last es-flex-container-col">
                 <img src="./assets/img/18+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <p>18 +</p>
+                    <h3>18 +</h3>
                     <div><img src="assets/img/18+ icon.png"></div>
                 </figcaption>
             </figure>
