add divider lines

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <figure class="es-grid-item es-centered">
                 <h2>Compre todos os  sets da lego</h2>
             </figure>
-            
         </section>
 
         <section class="es-divider div-01"></section>
@@ -80,6 +79,11 @@
                 </figcaption>
             </figure>
         </section>
+
+        <section class="es-divider div-02"></section>
+
+        <section class="es-divider div-03"></section>
+
     </main>
 </body>
 </html>
