--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
 
         <section class="es-divider div-02"></section>
 
+        <section id="es-categories-theme">
+
+        </section>
+
         <section class="es-divider div-03"></section>
 
     </main>
