--- a/index.html
+++ b/index.html
@@ -82,7 +82,66 @@
 
         <section class="es-divider div-02"></section>
 
-        <section id="es-categories-theme">
+        <section id="es-categories-theme" class="es-grid-container">
+            <figure>
+                <div class="es-flex-container-row">
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/LEGO-logo.png">
+                        <img src="./assets/img/city.png">
+                    </div>
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/city-icon.png">
+                    </div>
+                </div>
+                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
+                <figcaption>
+                    <h3>6+</h3>
+                </figcaption>
+            </figure>
+
+            <figure>
+                <div class="es-flex-container-row">
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/LEGO-logo.png">
+                        <img src="./assets/img/city.png">
+                    </div>
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/city-icon.png">
+                    </div>
+                </div>
+                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
+                <figcaption>6+</figcaption>
+            </figure>
+
+            <figure>
+                <div class="es-flex-container-row">
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/LEGO-logo.png">
+                        <img src="./assets/img/city.png">
+                    </div>
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/city-icon.png">
+                    </div>
+                </div>
+                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
+                <figcaption>6+</figcaption>
+            </figure>
+
+            <figure>
+                <div class="es-flex-container-row">
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/LEGO-logo.png">
+                        <img src="./assets/img/city.png">
+                    </div>
+                    <div class="es-flex-container-col">
+                        <img src="./assets/img/city-icon.png">
+                    </div>
+                </div>
+                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
+                <figcaption>6+</figcaption>
+            </figure>
+
+        
 
         </section>
 
