--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
         <section class="es-divider div-02"></section>
 
-        <section id="es-categories-theme" class="es-grid-container">
+        <section id="es-categories-theme" class="es-grid-container margin">
             <figure>
                 <div class="es-flex-container-row">
-                    <div class="es-flex-container-col">
+                    <div class="es-flex-container-col square">
                         <img src="./assets/img/LEGO-logo.png">
                         <img src="./assets/img/city.png">
                     </div>
@@ -94,51 +94,57 @@
                     </div>
                 </div>
                 <img class="es-flex-container-col" src="./assets/img/city-pic.png">
-                <figcaption>
+                <figcaption class="margin">
                     <h3>6+</h3>
                 </figcaption>
             </figure>
 
             <figure>
                 <div class="es-flex-container-row">
-                    <div class="es-flex-container-col">
+                    <div class="es-flex-container-col square">
                         <img src="./assets/img/LEGO-logo.png">
-                        <img src="./assets/img/city.png">
+                        <img src="./assets/img/friends.png">
                     </div>
                     <div class="es-flex-container-col">
-                        <img src="./assets/img/city-icon.png">
+                        <img src="./assets/img/friends-icon.png">
                     </div>
                 </div>
-                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
-                <figcaption>6+</figcaption>
+                <img class="es-flex-container-col" src="./assets/img/friends-pic.png">
+                <figcaption class="margin">
+                    <h3>6+</h3>
+                </figcaption>
             </figure>
 
             <figure>
                 <div class="es-flex-container-row">
-                    <div class="es-flex-container-col">
+                    <div class="es-flex-container-col square">
                         <img src="./assets/img/LEGO-logo.png">
-                        <img src="./assets/img/city.png">
+                        <img src="./assets/img/ninjago.png">
                     </div>
                     <div class="es-flex-container-col">
-                        <img src="./assets/img/city-icon.png">
+                        <img src="./assets/img/ninjago-icon.png">
                     </div>
                 </div>
-                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
-                <figcaption>6+</figcaption>
+                <img class="es-flex-container-col" src="./assets/img/ninjago-pic.png">
+                <figcaption class="margin">
+                    <h3>6+</h3>
+                </figcaption>
             </figure>
 
             <figure>
                 <div class="es-flex-container-row">
-                    <div class="es-flex-container-col">
+                    <div class="es-flex-container-col square">
                         <img src="./assets/img/LEGO-logo.png">
-                        <img src="./assets/img/city.png">
+                        <img src="./assets/img/duplo.png">
                     </div>
                     <div class="es-flex-container-col">
-                        <img src="./assets/img/city-icon.png">
+                        <img src="./assets/img/duplo-icon.png">
                     </div>
                 </div>
-                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
-                <figcaption>6+</figcaption>
+                <img class="es-flex-container-col" src="./assets/img/duplo-pic.png">
+                <figcaption class="margin">
+                    <h3>6+</h3>
+                </figcaption>
             </figure>
 
         
