--- a/index.html
+++ b/index.html
@@ -83,66 +83,66 @@
         <section class="es-divider div-02"></section>
 
         <section id="es-categories-theme" class="es-grid-container margin">
-            <figure>
-                <div class="es-flex-container-row">
-                    <div class="es-flex-container-col square">
+            <figure class="es-grid-container-card">
+                <!-- <div class="es-grid-container-card-head"> -->
+                    <div class="es-grid-container-card-head-L">
                         <img src="./assets/img/LEGO-logo.png">
                         <img src="./assets/img/city.png">
                     </div>
-                    <div class="es-flex-container-col">
+                    <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/city-icon.png">
                     </div>
-                </div>
-                <img class="es-flex-container-col" src="./assets/img/city-pic.png">
-                <figcaption class="margin">
+                <!-- </div> -->
+                <img class="es-grid-container-card-body" src="./assets/img/city-pic.png">
+                <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
                 </figcaption>
             </figure>
 
-            <figure>
-                <div class="es-flex-container-row">
-                    <div class="es-flex-container-col square">
+            <figure class="es-grid-container-card">
+                <!-- <div class=""> -->
+                    <div class="es-grid-container-card-head-L">
                         <img src="./assets/img/LEGO-logo.png">
                         <img src="./assets/img/friends.png">
                     </div>
-                    <div class="es-flex-container-col">
+                    <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/friends-icon.png">
                     </div>
-                </div>
-                <img class="es-flex-container-col" src="./assets/img/friends-pic.png">
-                <figcaption class="margin">
+                <!-- </div> -->
+                <img class="es-grid-container-card-body" src="./assets/img/friends-pic.png">
+                <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
                 </figcaption>
             </figure>
 
-            <figure>
-                <div class="es-flex-container-row">
-                    <div class="es-flex-container-col square">
+            <figure class="es-grid-container-card">
+                <!-- <div class=""> -->
+                    <div class="es-grid-container-card-head-L">
                         <img src="./assets/img/LEGO-logo.png">
                         <img src="./assets/img/ninjago.png">
                     </div>
-                    <div class="es-flex-container-col">
+                    <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/ninjago-icon.png">
                     </div>
-                </div>
-                <img class="es-flex-container-col" src="./assets/img/ninjago-pic.png">
-                <figcaption class="margin">
+                <!-- </div> -->
+                <img class="es-grid-container-card-body" src="./assets/img/ninjago-pic.png">
+                <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
                 </figcaption>
             </figure>
 
-            <figure>
-                <div class="es-flex-container-row">
-                    <div class="es-flex-container-col square">
+            <figure class="es-grid-container-card">
+                <!-- <div class=""> -->
+                    <div class="es-grid-container-card-head-L">
                         <img src="./assets/img/LEGO-logo.png">
                         <img src="./assets/img/duplo.png">
                     </div>
-                    <div class="es-flex-container-col">
+                    <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/duplo-icon.png">
                     </div>
-                </div>
-                <img class="es-flex-container-col" src="./assets/img/duplo-pic.png">
-                <figcaption class="margin">
+                <!-- </div> -->
+                <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+                <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
                 </figcaption>
             </figure>
