fix image sizes

--- a/index.html
+++ b/index.html
@@ -84,15 +84,12 @@
 
         <section id="es-categories-theme" class="es-grid-container margin">
             <figure class="es-grid-container-card">
-                <!-- <div class="es-grid-container-card-head"> -->
                     <div class="es-grid-container-card-head-L">
-                        <img src="./assets/img/LEGO-logo.png">
-                        <img src="./assets/img/city.png">
+                        <img src="./assets/img/city-logo.png">
                     </div>
                     <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/city-icon.png">
                     </div>
-                <!-- </div> -->
                 <img class="es-grid-container-card-body" src="./assets/img/city-pic.png">
                 <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
@@ -100,15 +97,12 @@
             </figure>
 
             <figure class="es-grid-container-card">
-                <!-- <div class=""> -->
                     <div class="es-grid-container-card-head-L">
-                        <img src="./assets/img/LEGO-logo.png">
-                        <img src="./assets/img/friends.png">
+                        <img src="./assets/img/friends-logo.png">
                     </div>
                     <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/friends-icon.png">
                     </div>
-                <!-- </div> -->
                 <img class="es-grid-container-card-body" src="./assets/img/friends-pic.png">
                 <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
@@ -116,15 +110,12 @@
             </figure>
 
             <figure class="es-grid-container-card">
-                <!-- <div class=""> -->
                     <div class="es-grid-container-card-head-L">
-                        <img src="./assets/img/LEGO-logo.png">
-                        <img src="./assets/img/ninjago.png">
+                        <img src="./assets/img/ninjago-logo.png">
                     </div>
                     <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/ninjago-icon.png">
                     </div>
-                <!-- </div> -->
                 <img class="es-grid-container-card-body" src="./assets/img/ninjago-pic.png">
                 <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
@@ -132,15 +123,12 @@
             </figure>
 
             <figure class="es-grid-container-card">
-                <!-- <div class=""> -->
                     <div class="es-grid-container-card-head-L">
-                        <img src="./assets/img/LEGO-logo.png">
-                        <img src="./assets/img/duplo.png">
+                        <img src="./assets/img/duplo-logo.png">
                     </div>
                     <div class="es-grid-container-card-head-R">
                         <img src="./assets/img/duplo-icon.png">
                     </div>
-                <!-- </div> -->
                 <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
                 <figcaption class="es-grid-container-card-footer">
                     <h3>6+</h3>
