add html to theme categories

--- a/index.html
+++ b/index.html
@@ -135,6 +135,57 @@
                 </figcaption>
             </figure>
 
+            <figure class="es-grid-container-card">
+                <div class="es-grid-container-card-head-L">
+                    <img src="./assets/img/duplo-logo.png">
+                </div>
+                <div class="es-grid-container-card-head-R">
+                    <img src="./assets/img/duplo-icon.png">
+                </div>
+            <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+            <figcaption class="es-grid-container-card-footer">
+                <h3>6+</h3>
+            </figcaption>
+        </figure>
+
+        <figure class="es-grid-container-card">
+            <div class="es-grid-container-card-head-L">
+                <img src="./assets/img/duplo-logo.png">
+            </div>
+            <div class="es-grid-container-card-head-R">
+                <img src="./assets/img/duplo-icon.png">
+            </div>
+        <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+        <figcaption class="es-grid-container-card-footer">
+            <h3>6+</h3>
+        </figcaption>
+    </figure>
+
+    <figure class="es-grid-container-card">
+        <div class="es-grid-container-card-head-L">
+            <img src="./assets/img/duplo-logo.png">
+        </div>
+        <div class="es-grid-container-card-head-R">
+            <img src="./assets/img/duplo-icon.png">
+        </div>
+    <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+    <figcaption class="es-grid-container-card-footer">
+        <h3>6+</h3>
+    </figcaption>
+</figure>
+
+<figure class="es-grid-container-card">
+    <div class="es-grid-container-card-head-L">
+        <img src="./assets/img/duplo-logo.png">
+    </div>
+    <div class="es-grid-container-card-head-R">
+        <img src="./assets/img/duplo-icon.png">
+    </div>
+<img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+<figcaption class="es-grid-container-card-footer">
+    <h3>6+</h3>
+</figcaption>
+</figure>
         
 
         </section>
