themes almost done

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
-                    <img src="./assets/img/duplo-logo.png">
+                    <img src="./assets/img/technic-logo.png">
                 </div>
                 <div class="es-grid-container-card-head-R">
-                    <img src="./assets/img/duplo-icon.png">
+                    <img src="./assets/img/technic-icon.png">
                 </div>
-            <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+            <img class="es-grid-container-card-body" src="./assets/img/technic-pic.png">
             <figcaption class="es-grid-container-card-footer">
                 <h3>6+</h3>
             </figcaption>
@@ -150,25 +150,22 @@
 
         <figure class="es-grid-container-card">
             <div class="es-grid-container-card-head-L">
-                <img src="./assets/img/duplo-logo.png">
+                <img src="./assets/img/starwars-logo.png">
             </div>
             <div class="es-grid-container-card-head-R">
-                <img src="./assets/img/duplo-icon.png">
+                <img src="./assets/img/starwars-icon.png">
             </div>
-        <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+        <img class="es-grid-container-card-body" src="./assets/img/starwars-pic.png">
         <figcaption class="es-grid-container-card-footer">
             <h3>6+</h3>
         </figcaption>
     </figure>
 
     <figure class="es-grid-container-card">
-        <div class="es-grid-container-card-head-L">
-            <img src="./assets/img/duplo-logo.png">
+        <div class="es-grid-container-card-head">
+            <img src="./assets/img/mario-logo.png">
         </div>
-        <div class="es-grid-container-card-head-R">
-            <img src="./assets/img/duplo-icon.png">
-        </div>
-    <img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+    <img class="es-grid-container-card-body" src="./assets/img/mario-pic.png">
     <figcaption class="es-grid-container-card-footer">
         <h3>6+</h3>
     </figcaption>
@@ -176,12 +173,12 @@
 
 <figure class="es-grid-container-card">
     <div class="es-grid-container-card-head-L">
-        <img src="./assets/img/duplo-logo.png">
+        <img src="./assets/img/potter-logo.png">
     </div>
     <div class="es-grid-container-card-head-R">
-        <img src="./assets/img/duplo-icon.png">
+        <img src="./assets/img/potter-icon.png">
     </div>
-<img class="es-grid-container-card-body" src="./assets/img/duplo-pic.png">
+<img class="es-grid-container-card-body" src="./assets/img/potter-pic.png">
 <figcaption class="es-grid-container-card-footer">
     <h3>6+</h3>
 </figcaption>
