positioned mario logo

--- a/index.html
+++ b/index.html
@@ -162,9 +162,13 @@
     </figure>
 
     <figure class="es-grid-container-card">
-        <div class="es-grid-container-card-head">
-            <img src="./assets/img/mario-logo.png">
+        <div class="es-grid-container-card-head-L">
+            
         </div>
+        <div class="es-grid-container-card-head-R">
+            <img src="./assets/img/mario-logo.png" id="es-mario-logo">
+        </div>   
+    
     <img class="es-grid-container-card-body" src="./assets/img/mario-pic.png">
     <figcaption class="es-grid-container-card-footer">
         <h3>6+</h3>
