--- a/index.html
+++ b/index.html
@@ -193,6 +193,33 @@
 
         <section class="es-divider div-03"></section>
 
+        <section id="es-categories-other" class="es-grid-container margin">
+            <figure class="es-grid-container-card-3x3">
+                <img src="./assets/img/animals-fg.png">
+                <figcaption>
+                    <h3>Animals</h3>
+                </figcaption>
+            </figure>
+            <figure class="es-grid-container-card-3x3">
+                <img src="./assets/img/vehicles-fg.png">
+                <figcaption>
+                    <h3>Veículos</h3>
+                </figcaption>
+            </figure>
+            <figure class="es-grid-container-card-3x3">
+                <img src="./assets/img/gaming-fg.png">
+                <figcaption>
+                    <h3>Gaming</h3>
+                </figcaption>
+            </figure>
+            <figure class="es-grid-container-card-3x3">
+                <img src="./assets/img/heroes-fg.png">
+                <figcaption>
+                    <h3>Aventuras e Heróis</h3>
+                </figcaption>
+            </figure>
+        </section>
+
     </main>
 </body>
 
