finish footer layout

--- a/index.html
+++ b/index.html
@@ -219,7 +219,33 @@
                 </figcaption>
             </figure>
         </section>
-
+        <footer id="es-footer" class="margin">
+            <div class="es-centered">
+              <h3>Todos os temas e categorias</h3>
+            <ul>
+                <li>City</li>
+                <li>Friends</li>
+                <li>Technic</li>
+                <li>Ninjago &#174;</li>
+                <li>Classic</li>
+                <li>DUPLO &#174;</li>
+                <li>Speed Champions</li>
+                <li>Avatar</li>
+                <li>Harry Potter</li>
+                <li>Marvel</li>
+                <li>Star Wars &#8482;</li>
+                <li>Minecraft</li>
+                <li>DC Superheroes</li>
+                <li>Disney</li>
+                <li>Jurassic World</li>
+                <li>Super Mario</li>
+                
+                <li>Adults welcome:</li>
+                <li>Art, Icons, Ideas</li>
+            </ul>  
+            </div>
+            
+        </footer>
     </main>
 </body>
 
