add id es-LEGO and put all styles inside of it

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/styles/reset.css">
+    <!-- <link rel="stylesheet" href="./assets/styles/reset.css"> -->
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 
 <body>
-    <main class="es-main">
+    <main class="es-main" id="es-LEGO">
         <header class="es-centered margin">
             <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
