corrected margin class name

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <main class="es-main" id="es-LEGO">
-        <header class="es-centered margin">
+        <header class="es-centered _margin">
             <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
         </header>
 
-        <section id="es-categories-main" class="es-grid-container margin">
+        <section id="es-categories-main" class="es-grid-container _margin">
             <figure class="es-grid-item">
                 <img src="./assets/img/01-novidades.png">
                 <figcaption class="es-figcaption-red">Novidades</figcaption>
@@ -37,7 +37,7 @@
 
         <section class="es-divider div-01"></section>
 
-        <section id="es-categories-age" class="es-grid-container margin">
+        <section id="es-categories-age" class="es-grid-container _margin">
             <figure class="es-grid-first es-flex-container-col">
                 <img src="./assets/img/1+ kid.png">
                 <figcaption class="es-flex-container-row">
@@ -84,7 +84,7 @@
 
         <section class="es-divider div-02"></section>
 
-        <section id="es-categories-theme" class="es-grid-container margin">
+        <section id="es-categories-theme" class="es-grid-container _margin">
             <figure class="es-grid-container-card">
                 <div class="es-grid-container-card-head-L">
                     <img src="./assets/img/city-logo.png">
@@ -193,7 +193,7 @@
 
         <section class="es-divider div-03"></section>
 
-        <section id="es-categories-other" class="es-grid-container margin">
+        <section id="es-categories-other" class="es-grid-container _margin">
             <figure class="es-grid-container-card-3x3">
                 <img src="./assets/img/animals-fg.png">
                 <figcaption>
