correct es_centered class name

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <main class="es-main" id="es-LEGO">
-        <header class="es-centered  es_margin">
-            <h1 class="es-centered">Bem-vindo </br>á loja da lego &#169;</h1>
+        <header class="es_centered  es_margin">
+            <h1 class="es_centered">Bem-vindo </br>á loja da lego &#169;</h1>
             <img src="./assets/img/banner.png">
         </header>
 
@@ -30,7 +30,7 @@
                 <img src="./assets/img/03-dificeis.png">
                 <figcaption class="es-figcaption-red">Difíceis de encontrar</figcaption>
             </figure>
-            <figure class="es-grid-item es-centered">
+            <figure class="es-grid-item es_centered">
                 <h2>Compre todos os sets da lego</h2>
             </figure>
         </section>
@@ -220,7 +220,7 @@
             </figure>
         </section>
         <footer id="es-footer" class="margin">
-            <div class="es-centered">
+            <div class="es_centered">
               <h3>Todos os temas e categorias</h3>
             <ul>
                 <li>City</li>
