up h3 font sizes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./assets/img/banner.png">
         </header>
 
-        <section id="es-categories-main" class="es-grid-container  es_margin">
+        <section id="es-categories-main" class="es-grid-container es_margin">
             <figure class="es-grid-item">
                 <img src="./assets/img/01-novidades.png">
                 <figcaption class="es-figcaption-red">Novidades</figcaption>
@@ -41,42 +41,42 @@
             <figure class="es-grid-first es-flex-container-col">
                 <img src="./assets/img/1+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <h3>1 &frac12; +</h3>
+                    <h3>1 &frac12;+</h3>
                     <img src="assets/img/1+ icon.png">
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/4+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <h3>4 +</h3>
+                    <h3>4+</h3>
                     <div><img src="assets/img/4+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/6+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <h3>6 +</h3>
+                    <h3>6+</h3>
                     <div><img src="assets/img/6+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/9+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <h3>9 +</h3>
+                    <h3>9+</h3>
                     <div><img src="assets/img/9+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-flex-container-col">
                 <img src="./assets/img/13+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <h3>13 +</h3>
+                    <h3>13+</h3>
                     <div><img src="assets/img/13+ icon.png"></div>
                 </figcaption>
             </figure>
             <figure class="es-grid-first es-grid-last es-flex-container-col">
                 <img src="./assets/img/18+ kid.png">
                 <figcaption class="es-flex-container-row">
-                    <h3>18 +</h3>
+                    <h3>Adultos</h3>
                     <div><img src="assets/img/18+ icon.png"></div>
                 </figcaption>
             </figure>
